scripts/yaml/basket.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket  
spec:
  selector:
    matchLabels:
      app: aksworksop
      component: basket 
  template:
    metadata:
      labels:
        app: aksworksop
        component: basket
    spec:
      containers:
      - name: basket
        image: workshopaks.azurecr.io/basket
        imagePullPolicy: Always
        ports:
        - containerPort: 5100
          name: http
        - containerPort: 5101
          name: grpc
#      imagePullSecrets:
#      - name: acr-key
