scripts/yaml/catalog.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  selector:
    matchLabels:
      app: aksworksop
      component: catalog 
  template:
    metadata:
      labels:
        app: aksworksop
        component: catalog
    spec:    
      containers:
      - name: catalog
        image: workshopaks.azurecr.io/catalog
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-key
