scripts/yaml/sql.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql
spec:
  selector:
    matchLabels:
      app: aksworksop
      component: sql 
  template:
    metadata:
      labels:
        app: aksworksop
        component: sql
    spec:
      containers:
      - name: sql
        image: microsoft/mssql-server-linux:2017-latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1433
