scripts/yaml/catalog.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aksworksop
    component: catalog
  name: catalog
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: aksworksop
    component: catalog
