scripts/yaml/order.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aksworksop
    component: order
  name: order
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: aksworksop
    component: order
