scripts/yaml/ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aksworkshop
  labels:
    app: aksworksop
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: edu.a9b127c7b3fe44f2a9ef.westeurope.aksapp.io
      http:
        paths:
          - path: /order-api
            backend:
              serviceName: order
              servicePort: http              
          - path: /catalog-api
            backend:
              serviceName: catalog
              servicePort: http   
          - path: /basket-api
            backend:
              serviceName: basket
              servicePort: http   
          - path: /
            backend:
              serviceName: website
              servicePort: http
